--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #000000ff;
+      background-color: #ffffff;
       font-family: Arial, sans-serif;
       font-size: 16px;
     }
