--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>AWS DevOps!</h1>
+    <h1>Welcome to AWS!</h1>
     <h2>You have successfully deployed this website using AWS code services.</h2>
     <h3>adnan academy devops class</h3>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
